# src/main/java/br/edu/utfpr/tsi/xenon/structure/repository/WorkstationRepository.java
@@ -1,7 +1,9 @@
 package br.edu.utfpr.tsi.xenon.structure.repository;
 
 import br.edu.utfpr.tsi.xenon.domain.workstations.entity.WorkstationEntity;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.data.jpa.repository.Query;
 import org.springframework.stereotype.Repository;
 
 @Repository
@@ -10,4 +12,7 @@ public interface WorkstationRepository extends JpaRepository<WorkstationEntity, 
     Boolean existsByIp(String ip);
 
     Boolean existsByName(String name);
+
+    @Cacheable(cacheNames = "Workstation", key = "#key", unless = "#result == null")
+    WorkstationEntity findIdByKey(String key);
 }
